@@ -57,6 +57,7 @@ aarch64_init (elf, machine, eh, ehlen)
   HOOK (eh, reloc_simple_type);
   HOOK (eh, return_value_location);
   HOOK (eh, check_special_symbol);
+  HOOK (eh, abi_cfi);
 
   return MODVERSION;
 }
